Fix player overlap on mobile phones in landscape

--- a/src/styles/components/_components.player.scss
+++ b/src/styles/components/_components.player.scss
@@ -29,6 +29,16 @@
         }
     }
 
+        /**
+         * 1. Prevent our UI controls overlapping with YouTube player's on
+         *    mobile phones in landscape mode. TODO: current number (double of
+         *    `$spacing-unit-large`) is arbitrary, in the future base this
+         *    number on the actual size of our control bars.
+         */
         .c-player__video {
             max-height: 100vh;
+
+            @include mq($until: large, $and: '(orientation: landscape)') {
+                max-height: calc(100vh - #{$spacing-unit-large * 2}); /* [1] */
+            }
         }
